--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0,minmum-scale=1.0,maxmum-scale=1.0,user-scalable=no">
     <title>周杰伦</title>
     <style>
         img {
@@ -14,9 +15,19 @@
 </head>
 
 <body>
-    <h1>周杰伦</h1>
+    <nav>
+        <ol>
+            <li><a href="#jay">个人简介</a></li>
+            <li><a href="#重要事件">重要事件</a></li>
+            <li><a href="#奖项列表">奖项列表</a></li>
+            <li><a href="#主要作品">主要作品</a></li>
+            <li><a href="#生活照">生活照</a></li>
+            <li><a href="#生平">生平</a></li>
+        </ol>
+    </nav>
+    <h1 id="jay">周杰伦</h1>
     <p>周杰伦（英语：Jay Chou，1979年1月18日－），台湾华语流行歌曲男歌手、音乐家、编曲家、唱片制片人、魔术师。同时是演员、导演、电子竞技职业战队J Team的老板。</p>
-    <h2>重要事件</h2>
+    <h2 id="重要事件">重要事件</h2>
     <ul>
         <li>2000年，周杰伦发行了他的首张专辑《Jay》。</li>
         <li>2003年，他是《时代》杂志（亚洲版）的封面故事，被称为“亚洲流行音乐的新天王”。他其后开展了六个世界巡演，在世界各地的城市中对超过1000万人表演。</li>
@@ -24,7 +35,7 @@
         <li>2011年，进入好莱坞，主演《青蜂侠》助理Kato。</li>
         <li>2016年，再次进入了好莱坞，在电影《惊天魔盗团》中扮演小李。</li>
     </ul>
-    <h2>奖项列表</h2>
+    <h2 id="奖项列表">奖项列表</h2>
     <ol>
         <li>第一张专辑《Jay》就获得金曲奖最佳专辑，同时也入围当年最佳制作人、最佳作曲人和最佳新人奖三项大奖。同年，获得新加坡金曲奖最佳新人奖。</li>
         <li>第二张专辑《范特西》获得包括最佳专辑、最佳编曲等在内的五个金曲奖奖项。</li>
@@ -38,7 +49,7 @@
         <li>周杰伦出道以来，发行的其中四张专辑（分别为《Jay》、《范特西》、《叶惠美》和《跨时代》）曾拿下金曲奖最佳国语专辑奖。</li>
         <li>周杰伦分别于2004年、2006年、2007年、2008年，共四次获得世界音乐大奖“亚洲最高销量艺人”奖。</li>
     </ol>
-    <h2>主要作品</h2>
+    <h2 id="主要作品">主要作品</h2>
     <table>
         <thead>
             <tr>
@@ -105,13 +116,13 @@
             </tr>
         </tbody>
     </table>
-    <h2>生活照</h2>
+    <h2 id="生活照">生活照</h2>
     <ul>
-        <div><img width="400" src="1.jpg" alt="图一"></div>
-        <div><img width="400" src="2.jpg" alt="图二"></div>
-        <div><img width="400" src="3.jpg" alt="图三"></div>
+        <div><a href="1.jpg" target="_blank"><img width="400" src="1.jpg" alt="图一"></a></div>
+        <div><a href="2.jpg" target="_blank"><img width="400" src="2.jpg" alt="图二"></a></div>
+        <div><a href="3.jpg" target="_blank"><img width="400" src="3.jpg" alt="图三"></a></div>
     </ul>
-    <h2>生平</h2>
+    <h2 id="生平">生平</h2>
     <p>周杰伦在林口长大，为家中的独生子。父亲周耀中，当时任教于台北县芦洲国中，教授生物；母亲叶惠美则是林口国中美术教师。14岁时父母离异，由父亲担任监护人，年满18岁后选择与母亲共同生活，周杰伦在台湾民视新闻台由胡婉玲主持的节目《台湾演义》专访中，澄清《爸，我回来了》的灵感，只是对社会上家暴现象的感慨，并非指涉父母间的状况，父亲方面的亲戚也曾质疑过他，他还为此向亲戚们澄清，为此误解抱歉过。
     </p>
     <p>
